Reworked the local context to use session credentials

--- a/main/tools/src/main/resources/config.properties
+++ b/main/tools/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 AWS_REGION=[enter region code]
-AccessKey=[enter access key]
-SecretKey=[enter secret key]
+AccessKeyId=[enter access key id]
+SecretAccessKey=[enter secret access key]
+SessionToken=[enter session token]
   
 DealerTableName=ConnectedCar_Dealer_Table_Dev
 TimeslotTableName=ConnectedCar_Timeslot_Table_Dev
