added windows commands to tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,11 +12,29 @@
             "${workspaceFolder}/main/pom.xml"
         ]
       },
+      "windows": {
+        "command": "mvn",
+        "type": "shell",
+        "args": [
+            "package",
+            "-f",
+            "${workspaceFolder}/main/pom.xml"
+        ]
+      },
       "group": "build"
     },
     {
       "label": "scan",
       "osx": {
+        "command": "mvn",
+        "type": "shell",
+        "args": [
+            "dependency-check:check",
+            "-f",
+            "${workspaceFolder}/main/pom.xml"
+        ]
+      },
+      "windows": {
         "command": "mvn",
         "type": "shell",
         "args": [
